# tcia-handler

./: README.md  data_analysis_report.html  pyproject.toml
dicom_mapper/: __init__.py  __main__.py
dicom_mapper/cli/: __init__.py  pipeline.py
dicom_mapper/core/: geometry.py  highdicom_creation.py
dicom_mapper/io/: dicom.py  export.py  vendor.py
dicom_mapper/processing/: resampling.py  visualization.py
docs/: dicom.md  dicom_mapping.md  rwth_dataset_process.md  train.md
reports/2026-01-10_12-28-58/: t2.html
reports/2026-01-10_12-29-24/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
reports/2026-01-10_12-29-45/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
reports/2026-01-10_12-30-40/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
reports/2026-01-10_12-31-14/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
reports/2026-01-10_13-18-16/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
reports/2026-01-10_13-20-09/: ep2d_adc.html  ep2d_calc.html  overview.html  t2.html
service/: mapping.py  preprocess.py  visualize.py
tools/: README_TCIA_GENERATOR.md  __init__.py  generate_tcia_by_class.py  generate_tcia_by_study.py  generate_training_metadata.py  process_vendor_samples.py  tcia_generator.py
tools/preprocessing/: README_OVERLAY_PROCESSING.md  __init__.py  convert_xlsx2parquet.py  dicom_converter.py  generate_ignore_list.py  merge_datasets.py  process_overlay_aligned.py  process_overlay_to_masks.py  visualize_overlay_masks.py
tools/validation/: __init__.py  analyze_data.py  validate_2d5_setup.py
(+1 files in other folders)
